@@ -61,12 +61,19 @@ public:
   /** Set whether to run Vidalia on system boot. */
   void setRunVidaliaOnBoot(bool run);
 
-  /** Returns a fully-qualified path to the web browser, including the
-   * executable name. */
+  /** If browserDirectory is empty, returns a fully-qualified path to
+   * the web browser, including the executable name. If browserDirectory
+   * is set, then returns the basename of the configured web browser */
   QString getBrowserExecutable() const;
   /** Sets the location and name of the web browser executable to the given
    * string. If set to the empty string, the browser will not be started. */
   void setBrowserExecutable(const QString &browserExecutable);
+
+  /** Returns a fully-qualified path to the web browser directory */
+  QString getBrowserDirectory() const;
+  /** Sets the location and name of the web browser directory to the given string.
+   * If set to the empty string, the browser will not be started. */
+  void setBrowserDirectory(const QString &browserDirectory);
 
   /** Returns a fully-qualified path to the IM client, including the
    * executable name. */
